--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "bcryptjs": "^2.4.3",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "yaml": "^2.5.0",
     "zod": "^3.23.8"
   }
