signaler un post et rechercher user or post

--- a/.env
+++ b/.env
@@ -4,4 +4,6 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://mhd:passer@localhost:3306/DBTAILLEUR"
+DATABASE_URL="mysql://sidydiopbalde:Toubakhayra@localhost:3306/Tailleur_Prisma_db"
+PORT=3000
+SECRET_KEY=sdvghgjhdshnfdhjfjdjfdkjhf12333NHBHBHJKNKJNKJNJ
