--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@prisma/client": "^5.18.0",
     "@types/dotenv": "^6.1.1",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/nodemailer": "^6.4.15",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.14",
     "yaml": "^2.5.0",
     "zod": "^3.23.8"
   }
