--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,9 @@
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "lib": ["es2023", "dom"],
+
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
